# Generated by Django 5.1.6 on 2026-03-04 02:31

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('access', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Drone',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=64, unique=True, verbose_name='业务编码')),
                ('name', models.CharField(max_length=128, verbose_name='无人机名称')),
                ('model', models.CharField(max_length=128, verbose_name='型号')),
                ('serial_no', models.CharField(max_length=128, unique=True, verbose_name='出厂序列号')),
                ('status', models.CharField(choices=[('ENABLED', '启用'), ('DISABLED', '停用')], default='DISABLED', max_length=16, verbose_name='状态')),
                ('org_id', models.BigIntegerField(blank=True, null=True, verbose_name='组织 ID')),
                ('created_by_staff_id', models.BigIntegerField(blank=True, null=True, verbose_name='创建人 Staff ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
            ],
            options={
                'db_table': 'drones',
                'ordering': ['-id'],
                'permissions': [('view_drone', '可查看无人机'), ('manage_drone', '可新增与编辑无人机'), ('change_drone_status', '可变更无人机状态')],
                'default_permissions': (),
            },
        ),
        migrations.CreateModel(
            name='DroneAssignment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('ACTIVE', '生效中'), ('INACTIVE', '已失效')], default='ACTIVE', max_length=16, verbose_name='分配状态')),
                ('start_at', models.DateTimeField(auto_now_add=True, verbose_name='开始时间')),
                ('end_at', models.DateTimeField(blank=True, null=True, verbose_name='结束时间')),
                ('created_by_staff_id', models.BigIntegerField(blank=True, null=True, verbose_name='创建人 Staff ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
                ('drone', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assignments', to='drone.drone', verbose_name='无人机')),
                ('staff', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='drone_assignments', to='access.staffprofile', verbose_name='飞手')),
            ],
            options={
                'db_table': 'drone_assignments',
                'ordering': ['-id'],
                'permissions': [('manage_drone_assignment', '可管理无人机分配')],
                'default_permissions': (),
                'constraints': [models.UniqueConstraint(condition=models.Q(('status', 'ACTIVE')), fields=('drone', 'staff'), name='uniq_active_drone_staff_assignment')],
            },
        ),
    ]
