// ============================================================
// 无人机分配 Schema
// 数据库：PostgreSQL
// 文档类型：图表 (schema)
// 说明：本文件聚焦分配关系实体，关联表以 ref 方式引用
// ============================================================

// 文档格式说明：
// 本文件为 DBML 格式的数据库图表文件。
// 更新本文档时，请遵循以下格式：
// ```
// Table {表名} [note: '{表说明}'] {
//   {字段名} {类型} [约束, note: '{字段说明}']
//   indexes {
//     {索引字段} [name: '{索引名}']
//   }
// }
// ```

Project low_altitude_drone_assignment_current {
  database_type: 'PostgreSQL'
  Note: '当前实现：无人机-租户成员分配关系（创建/查询/取消）'
}

// ============================================================
// 0. external refs 外部引用表（DBML 占位）
// 说明：以下表不属于本文件聚焦的实体落地范围，仅用于让 ref 可解析。
// ============================================================
Table drones [note: '无人机台账（占位，仅用于解析 drone_id 引用）'] {
  id bigserial [pk, note: 'id 主键']
}

Table tenants [note: '租户表（占位，仅用于解析 tenant_id 引用）'] {
  id bigserial [pk, note: 'id 主键']
}

Table tenant_members [note: '租户成员表（占位，仅用于解析 tenant_member_id 引用）'] {
  id bigserial [pk, note: 'id 主键']
}

Table drone_assignments [note: '无人机与租户成员分配关系'] {
  id bigserial [pk, note: '主键']
  tenant_id bigint [not null, ref: > tenants.id, note: '租户ID']
  drone_id bigint [not null, ref: > drones.id, note: '无人机ID']
  tenant_member_id bigint [not null, ref: > tenant_members.id, note: '租户成员ID']
  status varchar(16) [not null, default: 'ACTIVE', note: 'ACTIVE/INACTIVE']
  start_at timestamp [not null, default: `now()`, note: '生效时间']
  end_at timestamp [note: '失效时间']
  created_by_tenant_member_id bigint [note: '操作人 TenantMember ID']
  created_at timestamp [not null, default: `now()`, note: '创建时间']
  updated_at timestamp [not null, default: `now()`, note: '更新时间']

  indexes {
    (drone_id, tenant_member_id, status) [name: 'idx_drone_tenant_member_status']
  }
}

// 真实约束（以 migration 为准）：
// uniq_active_drone_tenant_member_assignment:
// unique(drone_id, tenant_member_id) where status='ACTIVE'

// 业务规则（接口层）：
// 1) 仅允许为当前租户下 ACTIVE 且持有 pilot_operator 角色的成员创建分配
// 2) 该成员绑定账号必须存在在职 staff_profile
// 3) cancel 动作幂等：INACTIVE 再次 cancel 仍返回成功态
// 4) cancel 请求体必须为空；非空返回 B0001

// 业务响应契约（非数据库字段）：
// response envelope: code / msg / data
// common codes: 00000 / A0401 / A0403 / B0001 / C0201 / C0404 / E0001
